# Fantasma

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
admin-dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
admin-dashboard/src/: App.svelte  app.css
admin-dashboard/src/lib/: api.ts  stores.ts
admin-dashboard/src/lib/components/: DataTable.svelte  Sidebar.svelte  StatCard.svelte
admin-dashboard/src/pages/: Audit.svelte  Clients.svelte  Dashboard.svelte  Issuers.svelte  Proofs.svelte  Settings.svelte
circuits/: Scarb.toml
circuits/src/: age_verification.cairo  credential_verification.cairo  kyc_verification.cairo  lib.cairo
circuits/src/common/: hash.cairo  merkle.cairo  mod.cairo
crates/fantasma-cli/: Cargo.toml
crates/fantasma-cli/src/: main.rs
crates/fantasma-cli/src/commands/: client.rs  credential.rs  db.rs  mod.rs  proof.rs  server.rs  status.rs
crates/fantasma-client-sdk/: Cargo.toml
crates/fantasma-client-sdk/examples/: proof_generation.rs  relying_party.rs  token_verification.rs
crates/fantasma-client-sdk/src/: lib.rs
crates/fantasma-core/: Cargo.toml
crates/fantasma-core/src/: claim.rs  credential.rs  error.rs  issuer.rs  lib.rs  proof.rs
crates/fantasma-crypto/: Cargo.toml
crates/fantasma-crypto/src/: dilithium.rs  hash.rs  keystore.rs  lib.rs  merkle.rs  nullifier.rs
crates/fantasma-db/: Cargo.toml
crates/fantasma-db/migrations/: 20240210_001_initial.sql
crates/fantasma-db/src/: lib.rs  models.rs  pool.rs  repos.rs
crates/fantasma-issuer/: Cargo.toml
crates/fantasma-issuer/src/: lib.rs
crates/fantasma-oidc/: Cargo.toml
crates/fantasma-oidc/src/: claims.rs  config.rs  discovery.rs  lib.rs  scopes.rs  token.rs
crates/fantasma-proof-store/: Cargo.toml
crates/fantasma-proof-store/src/: lib.rs
crates/fantasma-server/: Cargo.toml
crates/fantasma-server/src/: admin.rs  lib.rs  main.rs  middleware.rs  routes.rs  seeds.rs  state.rs
crates/fantasma-server/templates/: authorize.html
crates/fantasma-server/tests/: admin_api.rs  oidc_flow.rs
crates/fantasma-server/tests/common/: mod.rs
crates/fantasma-stark/: Cargo.toml
crates/fantasma-stark/src/: backend.rs  cairo_runner.rs  circuit.rs  lib.rs  prover.rs  stone_config.rs  verifier.rs  witness.rs
crates/fantasma-wallet/: Cargo.toml
crates/fantasma-wallet/src/: lib.rs
crates/fantasma-wasm/: Cargo.toml
crates/fantasma-wasm/src/: lib.rs
examples/relying-party/: README.md  package-lock.json  package.json  server.js
scripts/: compile-circuits.sh  dev.sh  docker.sh  test-all.sh
wallet-extension/: demo-credentials.json  manifest.chrome.json  manifest.firefox.json  manifest.json  package.json  tsconfig.json  vite.config.ts
wallet-extension/_locales/en/: messages.json
wallet-extension/scripts/: build.js  generate-icons.js
wallet-extension/src/background/: index.js  service-worker.ts
wallet-extension/src/content/: content-script.ts  index.js  inject.js
wallet-extension/src/lib/: api.ts  crypto.ts  storage.ts  types.ts
wallet-extension/src/options/: Options.svelte  options.html
wallet-extension/src/popup/: App.svelte  index.html  index.js  main.ts  popup.html
wallet-extension/src/utils/: crypto.js  storage.js
