[workspace]
resolver = "2"
members = [
    "crates/fantasma-core",
    "crates/fantasma-crypto",
    "crates/fantasma-stark",
    "crates/fantasma-oidc",
    "crates/fantasma-wallet",
    "crates/fantasma-issuer",
    "crates/fantasma-server",
    "crates/fantasma-proof-store",
    "crates/fantasma-client-sdk",
    "crates/fantasma-db",
    "crates/fantasma-cli",
    "crates/fantasma-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fantasma-id/fantasma"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
fantasma-core = { path = "crates/fantasma-core" }
fantasma-crypto = { path = "crates/fantasma-crypto" }
fantasma-stark = { path = "crates/fantasma-stark" }
fantasma-oidc = { path = "crates/fantasma-oidc" }
fantasma-wallet = { path = "crates/fantasma-wallet" }
fantasma-issuer = { path = "crates/fantasma-issuer" }
fantasma-proof-store = { path = "crates/fantasma-proof-store" }
fantasma-client-sdk = { path = "crates/fantasma-client-sdk" }
fantasma-db = { path = "crates/fantasma-db" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OIDC/OAuth2
openidconnect = "3.5"
oauth2 = "4.4"

# JWT handling
jsonwebtoken = "9.2"

# Post-Quantum Cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Hashing
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Random
rand = "0.8"
rand_chacha = "0.3"

# Memory safety
zeroize = { version = "1.7", features = ["derive"] }

# Async traits
async-trait = "0.1"

# URL handling
url = "2.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
