[package]
name = "fantasma-cli"
description = "Command-line interface for Fantasma identity provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fantasma"
path = "src/main.rs"

[dependencies]
fantasma-core = { workspace = true }
fantasma-crypto = { workspace = true }
fantasma-stark = { workspace = true }
fantasma-oidc = { workspace = true }
fantasma-proof-store = { workspace = true }
fantasma-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
