[package]
name = "fantasma-client-sdk"
description = "Client SDK for relying parties integrating with Fantasma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fantasma-core = { workspace = true }
fantasma-oidc = { workspace = true }
openidconnect = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
