[package]
name = "fantasma-crypto"
description = "Post-quantum cryptographic primitives for Fantasma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fantasma-core = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
