[package]
name = "fantasma-issuer"
description = "Credential issuer service for Fantasma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fantasma-core = { workspace = true }
fantasma-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
