[package]
name = "fantasma-stark"
description = "STARK prover/verifier integration for Fantasma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fantasma-core = { workspace = true }
fantasma-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"
tempfile = "3.10"
