[package]
name = "fantasma-wallet"
description = "User credential wallet for Fantasma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fantasma-core = { workspace = true }
fantasma-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
